assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

/* Selector to override default browser styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styling */
html {
    height: 100%;
    margin: 0;
}

body {
    height: 100%;
    display: flex;
    flex-direction: column;
    font-family: 'Raleway', sans-serif;
    color: #3a3a3a;
}

/* Header styling */
header {
    background-color: #daa520;
    display: flex;
    justify-content: center;
    align-items: baseline;
    box-shadow: 0 4px 4px #3a3a3a;
    padding: 0;
    z-index: 10;
    position: fixed;
    width: 100%;
    height: 57px;
}

/* Nav bar styling */
nav {
    background-color: #daa520;
    width: 100%;
    box-shadow: 0 4px 4px #3a3a3a;
    display: none;
    top: 100%;
    margin-top: 56.8px;
}

nav ul li a {
    color: #3a3a3a;
}

#menu {
    display: flex;
    list-style: none;
    margin: 0;
    padding-bottom: 5px;
    align-items: center;
    height: auto;
    flex-direction: column;
    width: 100%;
}

#menu li {
    flex: 1;
    text-align: center;
    align-items: center;
    border-bottom: #3a3a3a solid 2px;
    margin-bottom: 3px;
}

#menu a {
    text-decoration: none;
    
    font-size: 2em;
    transition: color;
}

.active {
    color: rgba(255, 0, 0, .5);
}

/* Dropdown toggle styling */
#menu-toggle {
    visibility: hidden;
    position: absolute;
}

.menu-toggle-label {
    position: absolute;
    height: 57px;
    width: 100%;
}

#menu-toggle:checked~nav {
    display: flex;
}

#dropdown-icon {
    display: flex;
    font-size: 2em;
    padding-top: 10px;
    justify-content: center;
    align-items: center;
}

#dropdown-icon h4 {
    font-family: 'Raleway', sans-serif;
    text-transform: uppercase;
    display: inline-block;
    font-weight: 400;
    margin-left: 5px;
}

/* Styling for main heading */
#main-heading {
    height: 40vh; 
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(rgba(255, 0, 0, .5), rgba(255, 0, 0, .5)), url(../images/main-heading-background.webp);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
    text-transform: uppercase;
    margin-top: 57px;
    text-shadow: 0 4px 4px #3a3a3a;
    flex-direction: column;
}

#main-heading h1 {
    color: #daa520;
    font-family: 'Cinzel', serif;
    font-size: 3.5em;
    font-weight: 400;
}

#main-heading button {
    align-items: center;
}

/* Main content styling */
main {
    display: flex;
    flex: 1 0 auto;
    flex-direction: column;
    background-color: pink;
    text-align: center;
}

.decorative-bar-top {
    height: 1.5vh;
    background-color: #daa520;
    width: 100%;
    box-shadow: 0 -4px 4px #3a3a3a;   
}

.decorative-bar-bottom {
    height: 1.5vh;
    background-color: #daa520;
    width: 100%;
    box-shadow: 0 4px 4px #3a3a3a;
    z-index: 15;
}

#about {
    color: #daa520;
    font-size: 150%;
    background-image: url(../images/about-section-background.webp);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 100%;
}

#about h2 {
    background-color: rgba(0, 0, 0, .7);
    align-self: center;
    width: 75%;
    margin-left: 12.5%;
    font-weight: 400;
    padding: 20px;
    margin-top: 70px;
}

#about p {
    width: 75%;
    margin-left: 12.5%;
    background-color: rgba(0, 0, 0, .7);
    padding: 20px;
}

.btn-primary {
    background-color: #daa520;
    color: rgba(255, 0, 0, 1);
    padding: 10px 20px;
    border: none;
    border-radius: 20%;
    cursor: pointer;
    margin-top: 40px;
    margin-bottom: 20px;
    font-size: 110%;
    font-weight: 700;
    box-shadow: 0 0 5px 1px #ffffff;
    transition: box-shadow 0.4s;
}

.btn-primary:hover {
    box-shadow: 0 0 5px 13px #ffffff;
    scale: 1.10;
}


/* Footer styling */
#socials {
    display: flex;
    background-color: #daa520;
    width: 100%;
    justify-content: space-between;
    list-style: none;
    box-shadow: 0 -4px 4px #3a3a3a;
    height: 57px;
}

#socials i {
    color: #3a3a3a;
    font-size: 200%;
    margin-top: 5px;
    width: 50%;
}

#socials i:hover {
    color: rgba(255, 0, 0, .5);
}

#socials li {
    border-left: 1px solid black;
    border-right: 1px solid black;
    flex: 1;
    text-align: center;
    height: 37px;
    margin-top: 10px;
}

/* Media query: large or lanscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #main-heading h1{
        font-size: 4.5em;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    #main-heading h1{
        font-size: 6.5em;
    }
    
    /* Nav bar styling */
    nav {
        display: block;
        width: 100%;
        align-items: center;
        margin-top: 0;
    }
    
    #menu {
        display: flex;
        justify-content: space-between;
        list-style: none;
        margin: 0;
        padding: 0;
        align-items: center;
        height: 57px;
        flex-direction: row;
    }
    
    #menu li {
        flex: 1;
        text-align: center;
        border-right: 1px solid black;
        border-left: 1px solid black;
        border-bottom: 0;
    }
    
    #menu a {
        text-decoration: none;
        font-size: 2em;
        transition: color;
    }
    
    #menu a:hover {
        color: rgba(255, 0, 0, .5);
    }

    /* Menu toggle styling */
    .menu-toggle-label {
        display: none;
    }

    #menu-toggle {
        display: none;
    }

    #about h2 {
        width: 40%;
        margin-left: 30%;
    }

    #about p {
        width: 40%;
        margin-left: 30%;
    }
}

/* media query: larger devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #main-heading h1{
        font-size: 8em;
        transition: font-size 0.7s ease;
    }

    #main-heading h1:hover {
        font-size: 9em;    
    }
}

